--- a/app/components/lookbook/button/component.html.erb
+++ b/app/components/lookbook/button/component.html.erb
@@ -1,7 +1,7 @@
 <%= render_component_tag tag_name,
   href: @href,
   class: [
-    "block bg-white text-lookbook-button-text focus:outline-none focus-visible:outline-none #{padding}",
+    "block text-lookbook-button-text focus:outline-none focus-visible:outline-none #{padding}",
     {
       "hover:text-lookbook-button-text-hover": !@disabled,
       "cursor-[not-allowed] opacity-50": @disabled
