--- a/app/views/layouts/lookbook/inspector.html.erb
+++ b/app/views/layouts/lookbook/inspector.html.erb
@@ -1,5 +1,5 @@
 <%= content_for :main do %>
-  <main class="h-[calc(100vh_-_40px)]">
+  <main class="h-[calc(100vh_-_2.5rem)]">
     <%= yield %>
   </main>
 <% end %>
