--- a/public/lookbook-assets/css/lookbook.css
+++ b/public/lookbook-assets/css/lookbook.css
@@ -1676,16 +1676,20 @@ pre[class*="language-"] {
   left: 0;
 }
 
+.top-\[39px\] {
+  top: 39px;
+}
+
+.-top-px {
+  top: -1px;
+}
+
 .top-1\/2 {
   top: 50%;
 }
 
 .right-3 {
   right: .75rem;
-}
-
-.-top-px {
-  top: -1px;
 }
 
 .-left-px {
@@ -1756,6 +1760,10 @@ pre[class*="language-"] {
 
 .mr-1 {
   margin-right: .25rem;
+}
+
+.mr-6 {
+  margin-right: 1.5rem;
 }
 
 .ml-auto {
@@ -1842,6 +1850,10 @@ pre[class*="language-"] {
   height: calc(100% - 40px);
 }
 
+.h-\[calc\(100vh_-_2\.5rem\)\] {
+  height: calc(100vh - 2.5rem);
+}
+
 .h-\[calc\(100vh_-_40px\)\] {
   height: calc(100vh - 40px);
 }
@@ -1926,16 +1938,16 @@ pre[class*="language-"] {
   width: 1.25rem;
 }
 
-.min-w-0 {
-  min-width: 0;
+.min-w-\[140px\] {
+  min-width: 140px;
 }
 
 .min-w-\[180px\] {
   min-width: 180px;
 }
 
-.min-w-\[140px\] {
-  min-width: 140px;
+.min-w-0 {
+  min-width: 0;
 }
 
 .min-w-\[100px\] {
@@ -2119,6 +2131,12 @@ pre[class*="language-"] {
   margin-left: calc(.25rem * calc(1 - var(--tw-space-x-reverse) ) );
 }
 
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(.5rem * calc(1 - var(--tw-space-y-reverse) ) );
+  margin-bottom: calc(.5rem * var(--tw-space-y-reverse) );
+}
+
 .space-x-6 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(1.5rem * var(--tw-space-x-reverse) );
@@ -2265,6 +2283,10 @@ pre[class*="language-"] {
   border-color: rgb(229 231 235 / var(--tw-border-opacity) );
 }
 
+.\!border-lookbook-header-border {
+  border-color: var(--lookbook-header-border) !important;
+}
+
 .border-transparent {
   border-color: #0000;
 }
@@ -2305,12 +2327,21 @@ pre[class*="language-"] {
   background-color: #0000;
 }
 
+.\!bg-lookbook-header {
+  background-color: var(--lookbook-header) !important;
+}
+
 .bg-lookbook-drawer {
   background-color: var(--lookbook-drawer);
 }
 
 .bg-lookbook-prose {
   background-color: var(--lookbook-prose);
+}
+
+.bg-zinc-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 250 250 / var(--tw-bg-opacity) );
 }
 
 .bg-lookbook-divider {
@@ -2534,8 +2565,8 @@ pre[class*="language-"] {
   line-height: 1.25;
 }
 
-.tracking-wide {
-  letter-spacing: .025em;
+.tracking-wider {
+  letter-spacing: .05em;
 }
 
 .text-red-300 {
@@ -2563,12 +2594,8 @@ pre[class*="language-"] {
   color: rgb(153 27 27 / var(--tw-text-opacity) );
 }
 
-.text-lookbook-prose-link {
-  color: var(--lookbook-prose-link);
-}
-
-.text-lookbook-branding-text {
-  color: var(--lookbook-branding-text);
+.\!text-lookbook-header-text {
+  color: var(--lookbook-header-text) !important;
 }
 
 .text-lookbook-button-text {
@@ -2578,6 +2605,10 @@ pre[class*="language-"] {
 .text-green-500 {
   --tw-text-opacity: 1;
   color: rgb(34 197 94 / var(--tw-text-opacity) );
+}
+
+.text-lookbook-branding-text {
+  color: var(--lookbook-branding-text);
 }
 
 .text-lookbook-prose-text {
@@ -2887,8 +2918,8 @@ pre[class*="language-"] {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity) );
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity) );
-  --tw-shadow: 0 4px 6px -1px #0000001a, 0 2px 4px -2px #0000001a;
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  --tw-shadow: 0 10px 15px -3px #0000001a, 0 4px 6px -4px #0000001a;
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   border: 1px solid #d1d5db;
 }
@@ -2918,7 +2949,6 @@ pre[class*="language-"] {
 .theme-blue {
   --lookbook-text: #27272a;
   --lookbook-divider: #d4d4d8;
-  --lookbook-branding-text: #000;
   --lookbook-button-text: #a1a1aa;
   --lookbook-button-text-hover: #2563eb;
   --lookbook-tooltip: #3b82f6;
@@ -2952,13 +2982,16 @@ pre[class*="language-"] {
   --lookbook-sidebar: #fafafa;
   --lookbook-page: #fff;
   --lookbook-drawer: #fafafa;
+  --lookbook-header: #2563eb;
+  --lookbook-header-text: #fff;
+  --lookbook-header-border: #1d4ed8;
+  --lookbook-branding-text: var(--lookbook-header-text);
   --lookbook-draggable-hint: #e0e7ff33;
 }
 
 :root {
   --lookbook-text: #27272a;
   --lookbook-divider: #d4d4d8;
-  --lookbook-branding-text: #000;
   --lookbook-button-text: #a1a1aa;
   --lookbook-button-text-hover: #4f46e5;
   --lookbook-tooltip: #6366f1;
@@ -2992,13 +3025,16 @@ pre[class*="language-"] {
   --lookbook-sidebar: #fafafa;
   --lookbook-page: #fff;
   --lookbook-drawer: #fafafa;
+  --lookbook-header: #4f46e5;
+  --lookbook-header-text: #fff;
+  --lookbook-header-border: #4338ca;
+  --lookbook-branding-text: var(--lookbook-header-text);
   --lookbook-draggable-hint: #e0e7ff33;
 }
 
 .theme-zinc {
   --lookbook-text: #27272a;
   --lookbook-divider: #d4d4d8;
-  --lookbook-branding-text: #000;
   --lookbook-button-text: #a1a1aa;
   --lookbook-button-text-hover: #52525b;
   --lookbook-tooltip: #71717a;
@@ -3032,6 +3068,10 @@ pre[class*="language-"] {
   --lookbook-sidebar: #fafafa;
   --lookbook-page: #fff;
   --lookbook-drawer: #fafafa;
+  --lookbook-header: #52525b;
+  --lookbook-header-text: #fff;
+  --lookbook-header-border: #3f3f46;
+  --lookbook-branding-text: var(--lookbook-header-text);
   --lookbook-draggable-hint: #e0e7ff33;
 }
 
@@ -3070,6 +3110,10 @@ pre[class*="language-"] {
   color: var(--lookbook-tabs-text-hover);
 }
 
+.hover\:underline:hover {
+  text-decoration-line: underline;
+}
+
 .hover\:opacity-100:hover {
   opacity: 1;
 }
@@ -3098,10 +3142,6 @@ pre[class*="language-"] {
 .focus-visible\:outline-none:focus-visible {
   outline-offset: 2px;
   outline: 2px solid #0000;
-}
-
-.group:hover .group-hover\:opacity-100 {
-  opacity: 1;
 }
 
 .prose-a\:text-lookbook-prose-link :is(:where(a):not(:where([class~="not-prose"] *))) {
