--- a/app/components/lookbook/header/component.html.erb
+++ b/app/components/lookbook/header/component.html.erb
@@ -12,7 +12,7 @@
 
     <% toolbar.section padded: false, align: :right, class: "flex items-center" do %>
       <%= render_component :button_group do |group| %>
-        <% if Rails.env == "development" %>
+        <% if Rails.env.development? %>
           <% group.button icon: :help_circle, class: "opacity-50 hover:opacity-100 transition !text-lookbook-header-text" do |button| %>
             <% button.dropdown do %>
               <%= tag.div class: "divide-y divide-lookbook-divider min-w-[180px]" do %>
@@ -21,9 +21,15 @@
                     <li>
                       <a href="#"
                         class="text-xs flex items-center hover:underline"
-                        @click.stop="localStorage.clear(); window.location.reload();">
-                        <%= render_component :icon, name: :clipboard, size: 2.5, class: "mr-2" %>
-                        <span>Copy debug info</span>
+                        x-data="clipboardComponent"
+                        @click.prevent.stop="copyToClipboard('#debug-data')">
+                        <%= render_component :icon,
+                          name: nil,
+                          size: 2.5,
+                          class: "mr-2",
+                          x_effect: "iconName = copied ? 'check' : 'clipboard'",
+                          ":class": "copied && 'text-green-600'" %>
+                        <span>Copy debug data</span>
                       </a>
                     </li>
                     <li>
@@ -39,10 +45,10 @@
                 <div class="flex items-center text-xs px-3 py-2 bg-zinc-50">
                   <span class="opacity-70 mr-1">Lookbook</span>
                   <span class="mr-6">v<%= Lookbook::VERSION %></span>
-                  <a href="https://github.com/allmarkedup/lookbook" target="_blank" class="ml-auto opacity-70">
+                  <a href="https://github.com/allmarkedup/lookbook" target="_blank" class="ml-auto opacity-70" title="Documentation">
                     <%= render_component :icon, name: :book, size: 3 %>
                   </a>
-                  <a href="https://github.com/allmarkedup/lookbook" target="_blank" class="ml-auto opacity-70">
+                  <a href="https://github.com/allmarkedup/lookbook" target="_blank" class="ml-auto opacity-70" title="Github">
                     <%= render_component :icon, name: :github, size: 3 %>
                   </a>
                 </div>
