--- a/app/components/lookbook/header/component.html.erb
+++ b/app/components/lookbook/header/component.html.erb
@@ -45,12 +45,14 @@
                 <div class="flex items-center text-xs px-3 py-2 bg-zinc-50">
                   <span class="opacity-70 mr-1">Lookbook</span>
                   <span class="mr-6">v<%= Lookbook::VERSION %></span>
-                  <a href="https://github.com/allmarkedup/lookbook" target="_blank" class="ml-auto opacity-70" title="Documentation">
-                    <%= render_component :icon, name: :book, size: 3 %>
-                  </a>
-                  <a href="https://github.com/allmarkedup/lookbook" target="_blank" class="ml-auto opacity-70" title="Github">
-                    <%= render_component :icon, name: :github, size: 3 %>
-                  </a>
+                  <div class="flex items-center space-x-2">
+                    <a href="https://github.com/allmarkedup/lookbook" target="_blank" class="ml-auto opacity-70" title="Documentation">
+                      <%= render_component :icon, name: :book, size: 3 %>
+                    </a>
+                    <a href="https://github.com/allmarkedup/lookbook" target="_blank" class="ml-auto opacity-70" title="Github">
+                      <%= render_component :icon, name: :github, size: 3 %>
+                    </a>
+                  </div>
                 </div>
               <% end %>
             <% end %>
