--- a/app/components/lookbook/header/component.html.erb
+++ b/app/components/lookbook/header/component.html.erb
@@ -23,21 +23,26 @@
                         class="text-xs flex items-center hover:underline"
                         x-data="clipboardComponent"
                         @click.prevent.stop="copyToClipboard('#debug-data')">
-                        <%= render_component :icon,
-                          name: nil,
-                          size: 2.5,
-                          class: "mr-2",
-                          x_effect: "iconName = copied ? 'check' : 'clipboard'",
-                          ":class": "copied && 'text-green-600'" %>
-                        <span>Copy debug data</span>
+                        <span x-show="copied" x-cloak>
+                          <%= render_component :icon,
+                            name: :check,
+                            size: 2.5,
+                            class: "text-green-600" %>
+                        </span>
+                        <span x-show="!copied">
+                          <%= render_component :icon,
+                            name: :clipboard,
+                            size: 2.5 %>
+                        </span>
+                        <span class="ml-2">Copy debug data</span>
                       </a>
                     </li>
                     <li>
                       <a href="#"
                         class="text-xs flex items-center hover:underline"
                         @click.stop="localStorage.clear(); window.location.reload();">
-                        <%= render_component :icon, name: :refresh_cw, size: 2.5, class: "mr-2" %>
-                        <span>Reset local storage</span>
+                        <%= render_component :icon, name: :refresh_cw, size: 2.5 %>
+                        <span class="ml-2">Reset local storage</span>
                       </a>
                     </li>
                   </ul>
