--- a/app/views/lookbook/previews/show.html.erb
+++ b/app/views/lookbook/previews/show.html.erb
@@ -22,10 +22,12 @@
 
       <% toolbar.section divide: :left, class: "flex-none relative z-10" do %>
         <%= render_component :button_group do |group| %>
-          <% group.button icon: :code,
-            tooltip: "Copy page embed code",
-            copy: true do %>
-              &lt;%= embed <%= @preview.preview_class %>, :<%= @example.name %>, params: <%= request.query_parameters.deep_symbolize_keys.to_s %> %&gt;
+          <% if Lookbook.pages.any? %>
+            <% group.button icon: :code,
+              tooltip: "Copy page embed code",
+              copy: true do %>
+                &lt;%= embed <%= @preview.preview_class %>, :<%= @example.name %>, params: <%= request.query_parameters.deep_symbolize_keys.to_s %> %&gt;
+            <% end %>
           <% end %>
           
           <% group.button icon: :refresh_cw,
