Adding tabs into a page to allow for sub-content specific to different mediums or audiences

--- a/app/views/lookbook/pages/show.html.erb
+++ b/app/views/lookbook/pages/show.html.erb
@@ -43,6 +43,31 @@
       <div id="page-main-<%= @page.id %>" data-morph-strategy="replace">
         <div class="prose max-w-none prose-a:text-indigo-900">
           <%= @page_content %>
+
+          <% if @page.tabs.any? %>
+            <div
+              id="page-tabs"
+              x-data="pageTabs"
+              x-init="active = '<%= @page.tabs.first.tab %>'"
+              class="p-5 border border-gray-500">
+              <nav class="flex">
+                <% @page.tabs.each do |tab| %>
+                  <button
+                    class="px-5 py-2 border"
+                    x-on:click="active = '<%= tab.tab %>'">
+                    <%= tab.label %>
+                  </button>
+                <% end %>
+              </nav>
+
+              <% @page.tabs.each do |tab| %>
+                <div x-show="active === '<%= tab.tab %>'">
+                  <%= page_controller.render_page(tab) %>
+                </div>
+              <% end %>
+            </div>
+          <% end %>
+
         </div>
       </div>
       <% if @page.footer? %>
