--- a/app/views/lookbook/pages/show.html.erb
+++ b/app/views/lookbook/pages/show.html.erb
@@ -56,7 +56,7 @@
                     class="px-5 border-b-2 font-bold"
                     :class="active === '<%= tab.tab %>' ? 'border-gray-500' : 'border-gray-50'"
                     x-on:click="changeTab('<%= tab.tab %>');">
-                    <%= tab.label %>
+                    <%= tab.label.presence || tab.tab %>
                   </button>
                 <% end %>
               </nav>
