--- a/app/views/lookbook/components/_embed.html.erb
+++ b/app/views/lookbook/components/_embed.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= id %>" x-data="embed" class="not-prose embed border border-gray-300 rounded-md overflow-hidden" @page:morphed.window="recaclulateIframeHeight">
+<div id="<%= id %>" x-data="embed" class="not-prose embed border border-gray-300 rounded-md overflow-hidden" @page:morphed.window="recaclulateIframeHeight" @tab-switch.window="recaclulateIframeHeight">
   <header class="px-3 py-2 flex items-center text-xs text-gray-400 bg-white border-b border-gray-300">
     <div class="text-gray-500">
       <%= example.preview.label %> (<%= example.label %>)
