--- a/app/views/lookbook/pages/show.html.erb
+++ b/app/views/lookbook/pages/show.html.erb
@@ -55,7 +55,7 @@
                   <button
                     class="px-5 border-b-2 font-bold"
                     :class="active === '<%= tab.tab %>' ? 'border-gray-500' : 'border-gray-50'"
-                    x-on:click="changeTab('<%= tab.tab %>');">
+                    x-on:click="changeTab('<%= tab.tab %>');$dispatch('tab-switch')">
                     <%= tab.label.presence || tab.tab %>
                   </button>
                 <% end %>
