adjust active tab styling

--- a/app/views/lookbook/pages/show.html.erb
+++ b/app/views/lookbook/pages/show.html.erb
@@ -54,7 +54,7 @@
                 <% @page.tabs.each do |tab| %>
                   <button
                     class="px-5 font-bold border-b-2 hover:border-indigo-100"
-                    :class="active === '<%= tab.tab %>' ? 'border-gray-500' : 'border-gray-50'"
+                    :class="active === '<%= tab.tab %>' ? '!border-gray-500 !cursor-default' : 'border-gray-50'"
                     x-on:click="changeTab('<%= tab.tab %>');$dispatch('tab-switch')">
                     <%= tab.label %>
                   </button>
