bit more styling on the tabs

--- a/app/views/lookbook/pages/show.html.erb
+++ b/app/views/lookbook/pages/show.html.erb
@@ -50,10 +50,10 @@
               x-data="pageTabs"
               x-init="active = '<%= @page.tabs.first.tab %>'"
               class="">
-              <nav class="flex py-2">
+              <nav class="flex border-b border-gray-300">
                 <% @page.tabs.each do |tab| %>
                   <button
-                    class="px-5 font-bold border-b-2 hover:border-indigo-100"
+                    class="px-5 py-2 font-bold border-b-2 hover:border-gray-500"
                     :class="active === '<%= tab.tab %>' ? '!border-gray-500 !cursor-default' : 'border-gray-50'"
                     x-on:click="changeTab('<%= tab.tab %>');$dispatch('tab-switch')">
                     <%= tab.label.presence || tab.tab %>
