--- a/app/views/lookbook/components/_nav_item.html.erb
+++ b/app/views/lookbook/components/_nav_item.html.erb
@@ -1,5 +1,5 @@
 <%
-path = show_path(item.lookup_path)
+path = lookbook_inspect_path(item.lookup_path)
 display ||= :item
 label ||= item.label
 item_icon = display == :node ? "layers" : "eye"
