--- a/app/views/lookbook/components/_nav_page.html.erb
+++ b/app/views/lookbook/components/_nav_page.html.erb
@@ -1,5 +1,5 @@
 <%
-path = page_path(node.lookup_path)
+path = lookbook_page_path(node.lookup_path)
 depth = node.hierarchy_depth + 1
 %>
 <li key="nav-page-<%= node.id %>-item">
