--- a/app/views/lookbook/previews/error.html.erb
+++ b/app/views/lookbook/previews/error.html.erb
@@ -1,1 +1,1 @@
-<iframe id="error-iframe" src="<%= url_for lookbook.preview_path %>" frameborder="0" class=" h-screen w-full" seamless></iframe>
+<iframe id="error-iframe" src="<%= url_for lookbook_preview_path %>" frameborder="0" class=" h-screen w-full" seamless></iframe>
