--- a/app/components/lookbook/tabs/dropdown_tab/component.html.erb
+++ b/app/components/lookbook/tabs/dropdown_tab/component.html.erb
@@ -1,5 +1,5 @@
 <%= render_component_tag :button,
-  x_ref: @ref,
+  x_ref: @name,
   class: "whitespace-nowrap px-4 py-2 border-l-2 cursor-pointer block w-full text-left",
   ":class": "{
     'border-lookbook-tabs-highlight': isSelected($el),
