--- a/app/views/lookbook/preview.html.erb
+++ b/app/views/lookbook/preview.html.erb
@@ -3,12 +3,12 @@
   <% examples.each do |example| %>
     <div style="all: unset; margin-bottom: 30px; display: block;">
       <h6 style="all: unset; display: block; color: #999; font-family: sans-serif; font-size: 14px; margin-top: 0; margin-bottom: 10px;">
-        <%= example[:label] %>
+        <%= example.label %>
       </h6>
-      <%= example[:html] %>
+      <%= example.output %>
     </div>
   <% end %>
 <% else %>
   <%# Render a single example %>
-  <%= examples.first[:html] %>
+  <%= examples.first.output %>
 <% end %>
