--- a/workbench/app/previews/tabbed_panels_preview/default.html.erb
+++ b/workbench/app/previews/tabbed_panels_preview/default.html.erb
@@ -9,20 +9,20 @@
   <% end %>
 <% end %>
 
-<%= render Lookbook::TabbedContent::Component.new(
+<%= render Lookbook::TabPanels::Component.new(
   alpine_data: "$store.workbench.tabbedPanels",
   class: "border border-gray-300 border-t-0 p-4 !h-auto"
-) do |content| %>
-  <% content.section do %>
+) do |tabs| %>
+  <% tabs.panel do %>
     First panel
   <% end %>
-  <% content.section do %>
+  <% tabs.panel do %>
     Second panel
   <% end %>
-  <% content.section do %>
+  <% tabs.panel do %>
     Third panel
   <% end %>
-  <% content.section do %>
+  <% tabs.panel do %>
     Fourth panel
   <% end %>
 <% end %>
