--- a/app/components/lookbook/tabs/tab/component.html.erb
+++ b/app/components/lookbook/tabs/tab/component.html.erb
@@ -1,6 +1,6 @@
 <%= render_component_tag :button,
   id: @id,
-  x_ref: @ref,
+  x_ref: @name,
   class: "whitespace-nowrap pt-2.5 pb-1.5 px-1 border-b-2 cursor-pointer",
   ":class": "{
     'border-lookbook-tabs-highlight': isSelected($el),
@@ -14,5 +14,5 @@
     disabled: @disabled
   },
   cloak: true do %>
-  <%= label %>
+  <%== label %>
 <% end %>
