--- a/app/views/lookbook/previews/panels/_notes.html.erb
+++ b/app/views/lookbook/previews/panels/_notes.html.erb
@@ -1,19 +1,19 @@
-<% items = rendered_examples.filter { |example| example[:notes].present? } %>
+<% items = examples.filter { |example| example.notes.present? } %>
 <% if items.many? %>
   <div class="divide-y divide-dashed divide-lookbook-divider bg-lookbook-prose h-full w-full">
     <% items.each do |item| %>
       <div class="px-4 py-6 relative">
         <h6 class="italic font-mono mb-4 opacity-40">
-          # <%= item[:label] %>
+          # <%= item.label %>
         </h6>
-        <%= render_component :prose, content: item[:notes] %>
+        <%= render_component :prose, content: item.notes %>
       </div>
     <% end %>
   </div>
 <% else %>
-  <div class="p-4 py-4 bg-lookbook-prose w-full h-full">
+  <div class="p-4 bg-lookbook-prose w-full h-full">
     <%= render_component :prose do %>
-      <%== items.any? ? items.first[:notes] : "<em class='opacity-50'>No notes provided.</em>" %>
+      <%== items.any? ? items.first.notes : "<em class='opacity-50'>No notes provided.</em>" %>
     <% end %>
   </div>
 <% end %>
