--- a/app/views/lookbook/previews/show.html.erb
+++ b/app/views/lookbook/previews/show.html.erb
@@ -1,20 +1,23 @@
 <%= render_component :split_layout,
   alpine_data: "$store.layout.inspector",
-  ":class": "$store.inspector.drawer.hidden && '!grid-rows-[1fr] !grid-cols-[1fr]'" do |layout| %>
+  ":class": "($store.inspector.drawer.hidden || #{@drawer_panels.none?}) && '!grid-rows-[1fr] !grid-cols-[1fr]'" do |layout| %>
 
   <%= layout.pane class: "flex flex-col h-full overflow-hidden",
     x_effect: "forceOrientation = (layoutWidth < $store.inspector.minVerticalSplitWidth) ? 'horizontal' : null" do %>
   
     <%= render_component :toolbar do |toolbar| %>
       <% toolbar.section ":class": "layoutResizing && 'overflow-hidden'" do %>
-        <%= render_component :tabs, alpine_data: "$store.inspector.preview" do |tabs| %>
-          <%= @preview_panels.each do |key, panel| %>
-            <% tabs.tab ref: key, **panel.extract!(:label, :hotkey, :disabled) %>
+        <%= render_component :tabs, alpine_data: "$store.inspector.main" do |tabs| %>
+          <%= @main_panels.each do |panel| %>
+            <% tabs.tab name: panel.name,
+              label: panel.label,
+              hotkey: panel.hotkey,
+              disabled: panel.disabled %>
           <% end %>
         <% end %>
       <% end %>
 
-      <% toolbar.section align: :right, padded: true, class: "flex-none min-w-[140px]", ":class": "{invisible: $store.inspector.preview.activeTab !== 'preview'}" do %>
+      <% toolbar.section align: :right, padded: true, class: "flex-none min-w-[140px]", ":class": "{invisible: $store.inspector.main.activeTab !== 'preview'}" do %>
         <%= render_component :dimensions_display,
           target: "[data-component=viewport] iframe",
           class: "ml-auto opacity-30 hover:opacity-100" %>
@@ -47,53 +50,57 @@
             cloak: true %>
         <% end %>
       <% end %>
-    <% end %> 
+    <% end %>
 
     <div class="h-full relative overflow-auto">
-      <%= render_component :tabbed_content, alpine_data: "$store.inspector.preview" do |content| %>
-        <%= @preview_panels.each do |key, panel| %>
-          <% content.section ref: key, class: "overflow-hidden" do %>
-            <%= render panel[:template],
-              preview: @preview,
-              example: @example,
-              rendered_examples: @rendered_examples,
-              **panel %>
+      <%= render_component :tab_panels, alpine_data: "$store.inspector.main" do |tabs| %>
+        <% @main_panels.each do |panel| %>
+          <% tabs.panel name: panel.name, class: panel.panel_classes do %>
+            <%= render panel.partial, **@inspector_data, panel: panel, **panel.locals %>
           <% end %>
         <% end %>
       <% end %>
     </div>
   <% end %>
 
-  <%= layout.pane class: "flex flex-col h-full overflow-hidden bg-lookbook-drawer", x_show: "!$store.inspector.drawer.hidden" do %>
+  <%= layout.pane class: "flex flex-col h-full overflow-hidden bg-lookbook-drawer",
+    x_show: "!$store.inspector.drawer.hidden && #{@drawer_panels.any?}" do %>
 
     <%= render_component :toolbar do |toolbar| %>
       <% toolbar.section ":class": "layoutResizing && 'overflow-hidden'" do %>
         <%= render_component :tabs, alpine_data: "$store.inspector.drawer" do |tabs| %>
-          <%= @drawer_panels.each do |key, panel| %>
-            <% tabs.tab ref: key, **panel.extract!(:label, :hotkey, :disabled) %>
+          <%= @drawer_panels.each do |panel| %>
+            <% tabs.tab name: panel.name,
+              label: panel.label,
+              hotkey: panel.hotkey,
+              disabled: panel.disabled %>
           <% end %>
         <% end %>
       <% end %>
 
-      <% toolbar.section align: :right, divide: :left, class: "flex-none relative z-10" do %>
+      <% toolbar.section align: :right,  class: "flex-none relative z-10" do %>
         <%= render_component :button_group do |group| %>
-
-          <%= @drawer_panels.each do |key, panel| %>
-            <% group.button icon: :clipboard,
-              tooltip: "Copy to clipboard",
-              copy: !!panel[:copy],
-              disabled: panel[:disabled] || !panel[:copy],
-              x_show: "$store.inspector.drawer.activeTab === '#{key}'",
+          <%= @drawer_panels.filter { |p| !p.disabled && p.copy }.each do |panel| %>
+            <% group.button icon: :copy,
+              tooltip: "Copy panel contents",
+              copy: !!panel.copy,
+              x_show: "$store.inspector.drawer.activeTab === '#{panel.name}'",
               cloak: true do %>
-              <%== panel[:copy] ? panel[:copy] : "" %>
+              <%== panel.copy ? panel.copy : "" %>
               <% end %>
-          <% end %>            
+          <% end %>  
+        <% end %>
+      <% end %>
+
+      <% toolbar.section divide: :left, class: "flex-none relative z-10" do %>
+        <%= render_component :button_group do |group| %>
 
           <% group.button icon: :corner_up_right,
             tooltip: "Move drawer to right",
             "@click": "switchOrientation",
             x_show: "horizontal && layoutWidth > $store.inspector.minVerticalSplitWidth",
             cloak: true %>
+
           <% group.button icon: :corner_up_right,
             x_show: "horizontal && layoutWidth <= $store.inspector.minVerticalSplitWidth",
             disabled: true,
@@ -114,14 +121,10 @@
     <% end %> 
 
     <div class="h-full overflow-auto">
-      <%= render_component :tabbed_content, alpine_data: "$store.inspector.drawer" do |content| %>
-        <% @drawer_panels.each do |key, panel| %>
-          <% content.section ref: key do %>
-            <%= render panel[:template],
-              preview: @preview,
-              example: @example,
-              rendered_examples: @rendered_examples,
-              **panel %>
+      <%= render_component :tab_panels, alpine_data: "$store.inspector.drawer" do |tabs| %>
+        <% @drawer_panels.each do |panel| %>
+          <% tabs.panel name: panel.name do %>
+            <%= render panel.partial, **@inspector_data, panel: panel, **panel.locals %>
           <% end %>
         <% end %>
       <% end %>
