Fix flakey tests

--- a/app/assets/lookbook/css/app.css
+++ b/app/assets/lookbook/css/app.css
@@ -58,7 +58,7 @@
 }
 
 @layer components {
-  .unsectioned > #nav > ul > li > div {
+  .unsectioned > nav > ul > li > div {
     @apply py-1 border-b border-gray-300;
   }
 
